--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
     </header>
     <main>
       <!--Герой-->
-      <div>
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
-        </section>
-      </div>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
       <!--Преимущества-->
       <section>
         <ul>
@@ -91,11 +89,20 @@
     <!--Футер-->
     <footer>
       <a href="/">WebStudio</a>
-      <ul>
-        <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+380961111111</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a
+              class="map link"
+              href="https://goo.gl/maps/t6CX7T1XGi5ZjcM69"
+              target="_blank"
+              rel="noopener noreferrer"
+            ></a>
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+380961111111</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
