--- a/index.html
+++ b/index.html
@@ -92,12 +92,9 @@
       <address>
         <ul>
           <li>
-            <a
-              class="map link"
-              href="https://goo.gl/maps/t6CX7T1XGi5ZjcM69"
-              target="_blank"
-              rel="noopener noreferrer"
-            ></a>
+            <a class="map link" href="https://goo.gl/maps/t6CX7T1XGi5ZjcM69" target="_blank" rel="noopener noreferrer">
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
           </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+380961111111</a></li>
